small fix for statistics CR: Iulia